patch [#29676] ALPHA OVER: Fix associated alpha over situation to fix [#29675] patch by Troy Sobotka note: if alpha is negative the code will still produce non-optimal results. This is a separate issue though, the patch fix the premul assumption that alpha can be zero and rgb still be valid.